# Multi-Robot-Decentralized-Architecture

./: .gitignore  README.md  docker-compose.yaml
agent/: Dockerfile-agent
agent/custom_catkin_packages/agent-starter/: CMakeLists.txt  package.xml
agent/custom_catkin_packages/agent-starter/launch/: agent.launch
agent/custom_catkin_packages/nimbro-agent/: CMakeLists.txt  package.xml
agent/custom_catkin_packages/nimbro-agent/launch/: topic_outgoing.launch
agent/launches/agent-cartographer/: agent_cartographer.launch  agent_node.lua
agent/scripts/: compile_project.sh  compile_project_isolated.sh  install_deps.sh  start_server.sh
cloud/: Dockerfile-cloud  README.md
cloud/cloud-cartographer/: Dockerfile  cartographer.rosinstall  start_server.sh
cloud/cloud-cartographer/postinstall/: cloud_cartographer.launch
gazebo-image/: Dockerfile
mounts/agent/: cartographer.launch  cartographer_turtlebot.lua  nimbro.launch
mounts/agent/agent-cartographer/: agent_cartographer.launch  agent_node.lua  agent_server.lua  cloud_server.lua
mounts/agent/scripts/: start_agent.sh
orchestrator/: Dockerfile-orchestrator  orchestrator.rosinstall
orchestrator/custom_catkin_packages/multiple-agents-launcher/: CMakeLists.txt
orchestrator/custom_catkin_packages/nimbro-simulator/: CMakeLists.txt  package.xml
orchestrator/postinstall/: gazebo_dep.launch  simulation.launch
orchestrator/postinstall/multiple-agents-launcher/: package.xml
orchestrator/postinstall/nimbro-launch/: receivers.launch  senders.launch
orchestrator/postinstall/nimbro-launch/launch/: incoming.launch  (+3 more)
(+21 files in other folders)
