<?xml version="1.0"?>
<package format="2">
  <name>agent-starter</name>
  <version>0.0.1</version>
  <description>Simulated Robot</description>
  <maintainer email="shreyas6gokhale@gmail.com">Shreyas Gokhale</maintainer>
  <license>MIT</license>

  <author email="shreyas6gokhale@gmail.com">Shreyas Gokhale</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
</package>
